Feat: Fix some bug & add socket
