# src/database/entity/joined-event.entity.ts
@@ -1,10 +1,16 @@
-import {Column, DeleteDateColumn, Entity, ManyToOne, PrimaryGeneratedColumn} from "typeorm";
-import {Event} from "./event.entity";
-import {User} from "./user.entity";
+import { Entity, PrimaryGeneratedColumn, Column, DeleteDateColumn, ManyToOne } from "typeorm";
+import { Event } from "./event.entity";
+import { User } from "./user.entity";
+
+export enum InvitationStatus {
+    INVITED = "invited",
+    PENDING = "pending",
+    ACCEPTED = "accepted"
+}
 
 @Entity()
 export class JoinedEventEntity {
-    @PrimaryGeneratedColumn({})
+    @PrimaryGeneratedColumn()
     id: number;
 
     @ManyToOne(() => Event, event => event.joinedUser)
@@ -13,9 +19,16 @@ export class JoinedEventEntity {
     @ManyToOne(() => User, user => user.joinedEvents)
     user: User;
 
-    @Column({})
+    @Column()
     joinDate: Date;
 
     @DeleteDateColumn({ nullable: true })
     leaveDate: Date;
+
+    @Column({
+        type: "enum",
+        enum: InvitationStatus,
+        default: InvitationStatus.INVITED
+    })
+    invitationStatus: InvitationStatus;
 }
