# src/docs/swagger_output.json
@@ -896,6 +896,58 @@
         }
       }
     },
+    "/events/invitation": {
+      "get": {
+        "tags": [
+          "Event"
+        ],
+        "description": "Récupérer les invitations à traiter pour l’utilisateur (status \"invited\" ou \"pending\").",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          }
+        }
+      }
+    },
+    "/events/invitation/{eventId}": {
+      "put": {
+        "tags": [
+          "Event"
+        ],
+        "description": "Mettre à jour le status d\\'une invitation pour un event. Fournir un status : \"accepted\", \"pending\" ou \"refused\" (le refus mène à la suppression de l\\'invitation).",
+        "parameters": [
+          {
+            "name": "eventId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          }
+        }
+      }
+    },
     "/folders": {
       "post": {
         "tags": [
@@ -1122,6 +1174,44 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Unauthorized to delete this folder.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "number",
+                  "example": 403
+                },
+                "msg": {
+                  "type": "string",
+                  "example": "Vous n'êtes pas autorisé à supprimer ce folder"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "404": {
+            "description": "Folder not found.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "number",
+                  "example": 404
+                },
+                "msg": {
+                  "type": "string",
+                  "example": "Folder not found"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -1464,14 +1554,27 @@
             "name": "username",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Username of the user",
-            "example": "johndoe"
+            "type": "string"
           },
           {
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Username of the friends",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "field": {
+                  "type": "string",
+                  "example": "azeraze#12345"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -2173,6 +2276,10 @@
           "type": "string",
           "example": "foobar"
         },
+        "childCreated": {
+          "type": "boolean",
+          "example": true
+        },
         "recurrencePattern": {
           "type": "string",
           "example": "monthly"
@@ -2300,20 +2407,36 @@
         }
       }
     },
+    "InvitationStatus": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string",
+          "example": "string"
+        },
+        "enum": {
+          "type": "array",
+          "example": [
+            "invited",
+            "pending",
+            "accepted"
+          ],
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
     "JoinedEventEntity": {
       "type": "object",
       "properties": {
-        "id": {
-          "type": "number",
-          "example": 666
-        },
-        "joinDate": {
-          "type": "string",
-          "example": "2019-01-01T00:00:00.000Z"
-        },
         "leaveDate": {
           "type": "string",
           "example": "2019-01-01T00:00:00.000Z"
+        },
+        "invitationStatus": {
+          "type": "string",
+          "example": "invited"
         },
         "event": {
           "$ref": "#/definitions/Event"
@@ -2367,6 +2490,10 @@
           "example": "foobar"
         },
         "email": {
+          "type": "string",
+          "example": "foobar"
+        },
+        "sub": {
           "type": "string",
           "example": "foobar"
         },
